traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:13: error: Missing closing brace `}' assumed here
}
^TraversalByColumn:16: error: expected class or object definition
def getMondeLargeur() = {
^